# LLM-controlled-drone

./: .gitignore  COURSE_2_NOTES.md  Course_2_LLM_Drone_From_Scratch_Ubuntu_24_04.docx  README.md  path_trail_rviz.py  prompt_chat.py  run_prompt_chat.sh  setup_workspace.sh
src/drone_agent/: package.xml  setup.cfg  setup.py
src/drone_agent/config/: params.yaml.template
src/drone_agent/drone_agent/: brain_node.py  command_translator.py  functiongemma_path_generator.py  llm_client.py  shape_generator.py  starvector_path_generator.py  trail_node.py  yolo_detector.py
src/drone_agent/launch/: drone_agent.launch.py
worlds/: drone_demo.sdf
